Rectify issues arising from usage of Java 23